# helius-rust-sdk

./: .gitignore  AGENTS.md  CONTRIBUTIONS.md  Cargo.toml  LICENSE  README.md  rustfmt.toml
.cursor/: rules
.github/workflows/: publish_crate.yml  rust.yml
examples/: append_address_to_webhook.rs  async_config_based_creation.rs  create_webhook.rs  delegate_and_revoke_collection_authority.rs  delete_webhook.rs  edit_webhook.rs  enhanced_websocket_accounts.rs  enhanced_websocket_transactions.rs  get_all_program_accounts.rs  get_all_token_accounts_by_owner.rs  get_all_webhooks.rs  get_asset_batch.rs  get_asset_proof_batch.rs  get_latest_blockhash.rs  get_latest_blockhash_async.rs  get_parse_transactions.rs  get_parsed_transaction_history.rs  get_priority_fee_estimate.rs  get_program_accounts_v2.rs  get_token_accounts_by_owner_v2.rs  get_transactions_for_address.rs  get_transactions_for_address_with_filters.rs  get_webhook_by_id.rs  mint_cnft.rs  remove_address_from_webhook.rs  revoke_collection_authority.rs  send_smart_transaction_with_seeds.rs  send_smart_transaction_with_tip.rs
src/: client.rs  config.rs  enhanced_transactions.rs  error.rs  factory.rs  jito.rs  lib.rs  main.rs  mint_api.rs  optimized_transaction.rs  request_handler.rs  rpc_client.rs  staking.rs  types.rs  webhook.rs  websocket.rs
src/types/: enhanced_transaction_types.rs  enhanced_websocket.rs  enums.rs  inner.rs  mod.rs  options.rs  types.rs
src/utils/: collection_authority.rs  deserialize_str_to_number.rs  is_valid_solana_address.rs  make_keypairs.rs  mod.rs  serde.rs
tests/: test_client.rs  test_client_staked.rs  test_config.rs  test_enhanced_transactions.rs  test_factory.rs  test_mint_api.rs  test_request_handler.rs  test_zk_compression.rs  tests.rs
tests/rpc/: test_get_asset.rs  test_get_asset_batch.rs  test_get_asset_proof.rs  test_get_asset_proof_batch.rs  test_get_asset_signatures.rs  test_get_assets_by_authority.rs  test_get_assets_by_creator  test_get_assets_by_creator.rs  test_get_assets_by_group.rs  test_get_assets_by_owner.rs  test_get_nft_editions.rs  test_get_priority_fee_estimate.rs  test_get_rwa_asset.rs  test_get_signatures_for_asset.rs  test_get_token_accounts.rs  test_get_transactions_for_address.rs  test_search_assets.rs
tests/types/: asset_list_with_native_balance.json  deserialize_enhanced_tx.rs  enhanced_tx__transaction_error_instruction_error.json  enhanced_tx__transaction_error_insufficient_founds.json  test_deserialize_asset_list.rs
tests/utils/: test_collection_authority.rs  test_deserialize_str_to_number.rs  test_is_valid_solana_address.rs  test_make_keypairs.rs
tests/webhook/: test_append_addresses_to_webhook.rs  test_create_webhook.rs  test_delete_webhook.rs  test_edit_webhook.rs  test_get_all_webhooks.rs  test_get_webhook_by_id.rs  test_remove_addresses_from_webhook.rs
