[package]
name = "helius"
version = "0.3.2"
edition = "2021"
description = "An asynchronous Helius Rust SDK for building the future of Solana"
keywords = ["helius", "solana", "asynchronous-sdk", "das", "cryptocurrency"]
repository = "https://github.com/helius-labs/helius-rust-sdk"
documentation = "https://docs.rs/helius/latest/helius/"
license = "MIT"
authors = ["0xIchigo <0xIchigo@protonmail.com>"]
readme = "README.md"
homepage = "https://www.helius.dev/"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3"
chrono = { version = "0.4.11", features = ["serde"] }
futures = "0.3.30"
futures-util = "0.3.30"
phf = { version = "0.11.2", features = ["macros"] }
rand = "0.8.5"
reqwest = { version = "0.11.22", features = ["json"], default-features = false }
semver = "1.0.23"
serde = "1.0.198"
serde-enum-str = "0.4.0"
serde_json = "1.0.116"
solana-account-decoder = "2.1.4"
solana-client = "2.1.4"
solana-program = "2.1.4"
solana-rpc-client-api = "2.1.4"
solana-sdk = "2.1.4"
solana-commitment-config = "2.1.4"
solana-transaction-status = "2.1.4"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.24.0"
url = "2.5.0"
spl-token = { version = "6.0", features = ["no-entrypoint"] }
once_cell = "1.21.3"

[dev-dependencies]
mockito = "1.4.0"

[features]
default = ["native-tls"]
native-tls = [
    "reqwest/native-tls",
    "tokio-tungstenite/native-tls"
]
rustls = [
    "reqwest/rustls-tls",
    "tokio-tungstenite/rustls-tls-webpki-roots"
]
