[package]
name = "helius"
version = "0.4.1"
rust-version = "1.85.1"
edition = "2021"
description = "An asynchronous Helius Rust SDK for building the future of Solana"
keywords = ["helius", "solana", "asynchronous-sdk", "das", "cryptocurrency"]
repository = "https://github.com/helius-labs/helius-rust-sdk"
documentation = "https://docs.rs/helius/latest/helius/"
license = "MIT"
authors = ["0xIchigo <0xIchigo@protonmail.com>"]
readme = "README.md"
homepage = "https://www.helius.dev/"

[dependencies]
base64 = "0.22.1"
bincode = "1.3.3" # TODO: Update when solana updates.
chrono = { version = "0.4.11", features = ["serde"] }
futures-util = "0.3.30"
once_cell = "1.21.3"
phf = { version = "0.13.1", features = ["macros"] }
rand = "0.9.2"
reqwest = { version = "0.12.23", features = ["json"], default-features = false }
semver = "1.0.23"
serde = "1.0.198"
serde-enum-str = "0.4.0"
serde_json = "1.0.116"
solana-account-decoder = "3.0.5"
solana-client = "3.0.5"
solana-commitment-config = "3.0.0"
solana-compute-budget-interface = "3.0.0"
solana-program = "3.0.0"
solana-rpc-client-api = "3.0.5"
solana-sdk = "3.0.0"
solana-stake-interface = "2.0.1"
solana-system-interface = "2.0.0"
solana-transaction-status = "3.0.5"
thiserror = "2.0.17"
tokio = { version = "1.37.0", features = ["macros", "rt-multi-thread", "net", "time"] }
tokio-stream = "0.1.15"
tokio-tungstenite = "0.28.0"
url = "2.5.0"

[dev-dependencies]
mockito = "1.4.0"

[features]
default = ["native-tls"]
native-tls = [
    "reqwest/native-tls",
    "tokio-tungstenite/native-tls"
]
rustls = [
    "reqwest/rustls-tls",
    "tokio-tungstenite/rustls-tls-webpki-roots"
]
